<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/water_drop_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thuligal"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="26sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_design"
                android:id="@+id/edt_username"
                android:hint="@string/username"
                android:maxLines="1"
                android:maxLength="15"
                android:gravity="center"
                android:textSize="18sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_design"
                android:inputType="textPassword"
                android:id="@+id/edt_password"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:maxLength="15"
                android:maxLines="1"
                android:gravity="center"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chkbox_show_password"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:text="@string/show_password"
                    android:layout_marginTop="10dp"
                    android:gravity="center|left"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/border_design_blue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Link your Store ?"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/link_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/uregister"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>