<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/bg_dark_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:text="@string/available_stock"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_marginRight="25dp">

            <TextView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:id="@+id/total_can_count"
                android:layout_gravity="center"
                android:textColor="@color/bg_dark_blue"
                android:text="0"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@drawable/border_design_circle"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/btn_add_can"
                android:layout_gravity="bottom"
                android:layout_marginLeft="-5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/add_can_icon"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:id="@+id/btn_new_order"
                    android:gravity="center"
                    android:background="@drawable/border_design_circle_blue">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/new_order_icon"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/new_order"
                    android:textColor="@color/bg_dark_blue"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:id="@+id/btn_cancel_order"
                    android:gravity="center"
                    android:background="@drawable/border_design_circle_blue">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/cancel_order_icon"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/cancel_order"
                    android:textColor="@color/bg_dark_blue"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:id="@+id/btn_history"
                    android:gravity="center"
                    android:background="@drawable/border_design_circle_blue">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:background="@drawable/order_history_icon"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/history"
                    android:textColor="@color/bg_dark_blue"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>